Fix spacing in Add Comment panel
git-svn-id: http://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@40232 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/components/comments/comments-list.css
+++ b/root/projects/slingshot/source/web/components/comments/comments-list.css
@@ -103,7 +103,7 @@
 {
    padding: 1em;
    margin-bottom: 1em;
-   height: 16em;
+   height: 18em;
 }
 
 .comments-list .comment-form h2
